@@ -1,4 +1,9 @@
 
+
+20110829:
+  + main.c: '--index' option and adjust the '-i', '-S' and '-I' options
+  + ezthumb.c: fixed the bug about no video stream issue
+
 20110824: V1.3.2
   + eznotify.c: fixed a bug that calling the eznotify() with null pointer
 
